--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
 }
 
 .colorBlock {
+  display: inline-block;
   height: 200px;
   width: 200px;
 }
 
-.colorBlock:hover{
+.colorBlock:hover {
   cursor: pointer;
 }
 
@@ -17,7 +18,8 @@ body {
 
 #blockContainer {
   width: 80%;
-  display: flex;
+  margin: 0 auto;
+  text-align: center;
 }
 
 #red {
